--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 							</h3>
 							<div class="mb-1 text-muted">CS6755 - 2019</div>
 							<a class="text-dark" href="pages/sherpa.html">
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/sherpa-min.png"></div></a>
-							<p class="card-text mb-auto midText">An application that helps cyclists perform maintenance and repair tasks.</p>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/sherpa-min.png"></div>
+							<p class="card-text mb-auto midText">An application that helps cyclists perform maintenance and repair tasks.</p></a>
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, UX Design, Usability Testing
 							</p>
@@ -110,8 +110,8 @@
 							</h3>
 							<div class="mb-1 text-muted">NCR - 2019</div>
 							<a class="text-dark" href="pages/unav.html" >
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/unav-min.png"></div></a>
-							<p class="card-text mb-auto midText">An accessibility mode which makes NCR's Kiosks accessible for wheelchair users.</p>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/unav-min.png"></div>
+							<p class="card-text mb-auto midText">An accessibility mode which makes NCR's Kiosks accessible for wheelchair users.</p></a>
 							<p class="card-text mb-auto downText">
 								UX Research, Accessibility Research, Usability Testing 
 							</p>
@@ -133,8 +133,8 @@
 							</h3>
 							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
 							<a class="text-dark" href="pages/virtual.html">
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div></a>
-							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div>
+							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p></a>
 							<p class="card-text mb-auto downText">
 								VR Developement, Arduino Communication
 							</p>
@@ -154,8 +154,8 @@
 							</h3>
 							<div class="mb-1 text-muted">Android Play Store - 2019</div>
 							<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div></a>
-							<p class="card-text mb-auto midText">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
+							<p class="card-text mb-auto midText">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p></a>
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, Prototyping, User Feedback, Android Development, Firebase Development, User Testing 
 							</p>
@@ -177,8 +177,8 @@
 							</h3>
 							<div class="mb-1 text-muted">SIC UIST - 2018</div>
 							<a class="text-dark" href="pages/jamoora.html">
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div></a>
-							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div>
+							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p></a>
 							<p class="card-text mb-auto downText">
 								Animatronics, Speech Recognition, Parallel Processing 
 							</p>
@@ -188,22 +188,23 @@
 					</div>
 				</div>
 
-				<!-- <div class="col-md-6">
+				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
 							<h3 class="mb-0">
-								<a class="text-dark" href="http://abhinavthukral.in/projects/beatdrop/" target="_blank">Beatdrop</a>
+								<a class="text-dark" href="pages/beat.html">Beatdrop</a>
 							</h3>
 							<div class="mb-1 text-muted">Design Sprint - 2017</div>
+							<a class="text-dark" href="pages/beat.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/beat-min2.png"></div>
-							<p class="card-text mb-auto midText">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
+							<p class="card-text mb-auto midText">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p></a>
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, Paper Prototyping, User Feedback, HiFi Prototyping 
 							</p>
 						</div>
 
 					</div>
-				</div> -->
+				</div>
 
 			</div>
 
