--- a/pages/beat.html
+++ b/pages/beat.html
@@ -180,7 +180,7 @@
 
 	</div>
 
-	<div class="jumbotron singPage"  id="finding-tag">
+	<div class="jumbotron singPage"  id="feature-tag">
 		<div class="container">
 			<p class="sectionHeading"><strong>FEATURES</strong></p>
 
@@ -250,10 +250,7 @@
 	<ul>
 		<li id="overview-color">Overview</li>
 		<li id="research-color">Research</li>
-		<li id="finding-color">Findings</li>
-		<li id="concept-color">Concepts</li>
-		<li id="solution-color">Evaluation</li>
-		<li id="testing-color">Testing</li>
+		<li id="feature-color">Features</li>
 	</ul>
 
 </div>
@@ -264,8 +261,8 @@
 	// Set the date we're counting down to
 	$(document).on('scroll', function() {
 
-		var allTag = ['#overview-tag', '#research-tag', '#finding-tag', '#concept-tag', '#solution-tag', '#testing-tag' ]
-		var allCol = ['#overview-color', '#research-color', '#finding-color', '#concept-color', '#solution-color', '#testing-color' ]
+		var allTag = ['#overview-tag', '#research-tag', '#feature-tag']
+		var allCol = ['#overview-color', '#research-color', '#feature-color']
 		
 		var l;
 		var flag=0;
