--- a/pages/mime.html
+++ b/pages/mime.html
@@ -81,13 +81,19 @@
 				Our solution aims to augment the uNav interface by creating an accessibility mode which changes the layout to make it more accessible using uNav control panel. The uNav Compatibility Mode targets user’s pain points on a community level for users who are using the uNav interface.<br><br>
 
 				<strong>Role</strong></br>
-			User Experience Research Lead</br>
-			Technological Lead
+			Product Manager</br>
+			Android Development
+			User Excperience Research
 			<br><br>
 
 
 			<strong>Team</strong></br>
-		Kevin Key, Varnit Jain, Benton Humphreys, Yunfei Wang </br></br>
+			Pranshu Bansal
+			Chirag Jain
+			Varnit Jain
+			Ponnurangam Kumaruguru
+			Sarthak Marwaha
+		</br></br>
 		<strong>Timeline</strong></br>
 	Aug 2019 - Nov 2019</br></br>
 
@@ -579,7 +585,7 @@
 
 
 
-<script>
+							<script>
 	// Set the date we're counting down to
 	$(document).on('scroll', function() {
 
