--- a/pages/beat.html
+++ b/pages/beat.html
@@ -192,19 +192,19 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Social Media Login</p>
-					<img src="beat-1.jpeg" class="middleImg" width="90%">
+					<img src="beat-1.jpeg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Informative Profile</p>
-					<img src="beat-2.jpeg" class="middleImg" width="90%">
+					<img src="beat-2.jpeg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Song Story</p>
-					<img src="beat-3.jpeg" class="middleImg" width="90%">
+					<img src="beat-3.jpeg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 			</div>
@@ -216,19 +216,19 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Music Player</p>
-					<img src="beat-4.jpg" class="middleImg" width="90%">
+					<img src="beat-4.jpg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Graph Search</p>
-					<img src="beat-5.jpeg" class="middleImg" width="90%">
+					<img src="beat-5.jpeg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 
 				<div class="col-lg-4">
 					<p class="contentTextDown" align="center">Scan QR to Connect</p>
-					<img src="beat-6.jpeg" class="middleImg" width="90%">
+					<img src="beat-6.jpeg" class="middleImg phoneImage" width="90%">
 					<p class="contentTextDown"></p>
 				</div>
 			</div>
