--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">Mime</a>
+								<a class="text-dark" href="pages/mime.html">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">Android Play Store - 2019</div>
 							<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
