--- a/pages/mime.html
+++ b/pages/mime.html
@@ -77,34 +77,33 @@
 
 
 					
-					<strong>Hypothesis</strong></br>
+				<strong>Hypothesis</strong></br>
 				Meme preferences can be an intrinsic indicator of personality traits</br></br>
 
-				<strong>Problem Statement</strong></br>
-			Memes have become a predominant means of expression in the social media- they are not only used as a means of entertainment but as an important tool for advertising, spreading propaganda, and even political ideologies. However, the creation of memes is limited to a niche community of content creators who are skilled in photo/video editing software.</br></br>
-
+				<strong>Solution Statement</strong></br>
+				An Android platform for all meme needs - a maker space where users can create memes, a personalized meme feed, and a space to connect with other meme enthusiasts.<br><br>
 
 			<strong>Role</strong></br>
-		Product Manager</br>
-	Android Development</br>
-	User Excperience Research
-	<br><br>
+			Product Manager</br>
+			Android Development</br>
+			User Excperience Research
+			<br><br>
 
 
-	<strong>Team</strong></br>
-Pranshu Bansal</br>
-Chirag Jain</br>
-Varnit Jain</br>
-Ponnurangam Kumaruguru</br>
-Sarthak Marwaha
-</br></br>
-<strong>Timeline</strong></br>
-Jan 2018 - April 2019</br></br>
+			<strong>Team</strong></br>
+			Pranshu Bansal</br>
+			Chirag Jain</br>
+			Varnit Jain</br>
+			Ponnurangam Kumaruguru</br>
+			Sarthak Marwaha
+		</br></br>
+		<strong>Timeline</strong></br>
+	Jan 2018 - April 2019</br></br>
 
-<strong>Android Store</strong></br> 
-<a href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
-	Download Link
-</a></br></br>
+	<strong>Android Store</strong></br> 
+			<a href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
+			Download Link
+			</a></br></br>
 
 
 </div>
@@ -121,59 +120,29 @@ Jan 2018 - April 2019</br></br>
 
 
 
+							</main>
 
-<div class="jumbotron singPage"  id="research-tag">
-	<div class="container pagesContent">
-		<p class="sectionHeading"><strong>HYPOTHESIS VALIDATION</strong></p><br>
-
-
-		<p class="contentTextDown">
-			We know that memes play an integral role in social media. We wondered if meme preferences could also dictate or be indicative of personality traits and social behaviour online. 
-			<br><br>
-		</p>
-
-		<p><strong>Initial Survey</strong></p>
-		<p class="contentTextDown">
-			Even though we were motivated to build a platform based on memes, we decided to do a small survey with the aim to see if others felt the same and not just work on our assumptions. We conducted a survey to gauge the strength of our research and assumptions. A total of 88 people filled the survey and result turned out as follows:<br> - 61.3% people spent at least 30 minutes every day on memes; <br>- 70.7% felt that memes they like represent their emotions and they connect with their content on a daily basis; <br>- 68% people wanted to connect to people with similar meme interests. <br><br>The major limitation of our survey was that it was shared amounst undergraduate students so we centered all our future research and design to cater to those needs. We consider them as our target audience for this project.
-		</p><br>
+<!-- 
 
 
-		<p><strong>Deceptive Study</strong></p>
-		<p class="contentText2">
-			We conductive a deceptive study where we asked users to come in pairs with their close friends. We told them that we're interested in studying social media behaviours but did not mention anything about memes. We had three objectives from the study:<br><br></p>
-			<ul class="contentText2">
-				<li>Meme Consumption Trends</li>
-				<li>Correlation between meme preferencees of friends</li>
-				<li></li>
-			</ul>
-			
+							<div class="footerAdjust"></div>
 
-		</div>
-	</div>
+							<div class="footer">
 
+								<ul>
+									<li id="overview-color">Overview</li>
+									<li id="research-color">Research</li>
+									<li id="finding-color">Findings</li>
+									<li id="concept-color">Concepts</li>
+									<li id="solution-color">Evaluation</li>
+									<li id="testing-color">Testing</li>
+								</ul>
 
-
-
-</main>
-
-<div class="footerAdjust"></div>
-
-<div class="footer">
-
-	<ul>
-		<li id="overview-color">Overview</li>
-		<li id="research-color">Research</li>
-		<li id="finding-color">Findings</li>
-		<li id="concept-color">Concepts</li>
-		<li id="solution-color">Evaluation</li>
-		<li id="testing-color">Testing</li>
-	</ul>
-
-</div>
+							</div>
+ -->
 
 
-
-<script>
+							<script>
 	// Set the date we're counting down to
 	$(document).on('scroll', function() {
 
