--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<a class="text-dark" href="pages/mime.html">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">Android Play Store - 2019</div>
-							<a class="text-dark" href="pages/mime.html>
+							<a class="text-dark" href="pages/mime.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
 							<p class="card-text mb-auto midText">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p></a>
 							<p class="card-text mb-auto downText">
