--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<div class="mb-1 text-muted">CS6755 - 2019</div>
 							<a class="text-dark" href="pages/sherpa.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/sherpa-min.png"></div>
-							<p class="card-text mb-auto midText">An application that helps cyclists perform maintenance and repair tasks.</p></a>
+							<p class="card-text mb-auto midText">An application that helps bicyclists perform maintenance and repair tasks.</p></a>
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, UX Design, Usability Testing
 							</p>
