--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
 							<a class="text-dark" href="pages/virtual.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div>
-							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p></a>
+							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build physical-manipulation enabled controllers of any shape or size.</p></a>
 							<p class="card-text mb-auto downText">
 								VR Developement, Arduino Communication
 							</p>
