--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -79,7 +79,9 @@
 
 					
 				<strong class="topHeading">Problem Statement</strong></br>
-				<em>"On The Go"<span class="extra">*Theme*</span></em> &nbsp;Bicycle Maintenance </br></br>
+				<em>"On The Go"
+				<!-- <span class="extra">*Theme*</span> -->
+				</em> &nbsp;Bicycle Maintenance </br></br>
 
 
 				<strong  class="topHeading">Proposed Solution</strong></br>
