--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -92,7 +92,7 @@
 
 
 				<strong  class="topHeading">Team</strong></br>
-				Kevin Key, Varnit Jain, Benton Humphreys, Yunfei Wang </br></br>
+				Benton Humphreys, Varnit Jain, Kevin Key,Yunfei Wang </br></br>
 
 				<strong  class="topHeading">Timeline</strong></br>
 				Aug 2019 - Nov 2019</br></br>
