--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,6 +9,8 @@
 
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,600&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/countdownStyle.css">
