--- a/pages/unav.html
+++ b/pages/unav.html
@@ -79,28 +79,27 @@
 			<div class="row">
 
 				<div class="col-lg-6 topImg d-flex align-items-center">
-					<img src="unav-main.png" width="100%">
+					<img src="unav-main3.png" width="60%" class="phoneImage2">
 				</div>
 
 				<div class="col-lg-6 contentText ">
 
 
 					
-					<strong>Problem Statement</strong></br>
-				Increasing accessibility for NCR Kiosks </br></br>
+				<strong  class="topHeading">Problem Statement</strong></br>
+				Increasing accessibility for NCR Kiosks for wheelchair users</br></br>
 
-				<strong>Solution Statement</strong></br>
+				<strong class="topHeading">Solution Statement</strong></br>
 				Our solution aims to augment the uNav interface by creating an accessibility mode which changes the layout to make it more accessible using uNav control panel. The uNav Compatibility Mode targets user’s pain points on a community level for users who are using the uNav interface.<br><br>
 
-				<strong>Role</strong></br>
-			User Experience Research Lead</br>
-			Technological Lead
+				<strong class="topHeading">Role</strong></br>
+			I conducted user experience research to finalize the design direction and performed usability tests on the prototype.
 			<br><br>
 
 
-			<strong>Team</strong></br>
+			<strong class="topHeading">Team</strong></br>
 		Kevin Key, Varnit Jain, Benton Humphreys, Yunfei Wang </br></br>
-		<strong>Timeline</strong></br>
+		<strong class="topHeading">Timeline</strong></br>
 	Aug 2019 - Nov 2019</br></br>
 
 
