--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -81,7 +81,7 @@
 				<div class="row">
 
 				<div class="col-lg-6 topImg d-flex align-items-center">
-					<img src="sherpa-main2.png" width="50%" align="center">
+					<img src="sherpa-main2.png" width="60%" align="center">
 				</div>
 
 				<div class="col-lg-6 contentText ">
@@ -98,7 +98,11 @@
 				Sherpa provides users with a step by step repair guide, which helps users perform repairs through visual and audio instructions. Additionally, it uses augmented reality to help users recognize unknown parts an  d a public repair station locator for users who do not carry necessary repair tools.<br><br>
 
 				<strong  class="topHeading">Role</strong></br>
-				I conducted user experience research to guide design decisions and provided technological expertise to judge feasability of features.</br><br>
+				I conducted user experience research to guide design decisions and provided technical expertise to judge the feasibility of features.</br><br>
+
+
+				<!-- <strong  class="topHeading">Takeaway</strong></br>
+				I conducted user experience research to guide design decisions and provided technological expertise to judge feasability of features.</br><br> -->
 
 
 				<strong  class="topHeading">Team</strong></br>
@@ -351,8 +355,8 @@
 					<div class="container">
 						<p class="sectionHeading"><strong>EVALUATION</strong></p>
 
-						<p class="contentTextDown">
-							In our evaluation plan, we planned three evaluation methods: Usability Expert Review, Bike Mechanic Review, and Usability Testing. However, we had to perform a discount evaluation, we chose to do the Usability Expert Review, but with the inclusion of task-based evaluation to make the review more holistic. Each session involved two to three people: the evaluator, the facilitator, and possibly an additional note taker if available. We created a high fidelity prototype to test our proposed solution. We split our evaluation into two parts, the usability expert review and task-based evaluation.<br><br>
+						<p class="contentTextDown"> 
+							In our evaluation plan, we planned three evaluation methods: Usability Expert Review, Bike Mechanic Review, and Usability Testing. However, we had to perform a discount evaluation, we chose to do the Usability Expert Review, but with the inclusion of task-based evaluation to make the review more holistic. Each session involved two to three people: the evaluator, the facilitator, and possibly an additional note taker if available. We created a high fidelity prototype (shown below) to test our proposed solution. We split our evaluation into two parts, the usability expert review and task-based evaluation.<br><br>
 							<strong>Participants</strong>- Five HCI cohorts who have been trained to evaluate a design considering usability specifications
  						<br><br>
 						</p>
